# peg-in-hole

./: .gitignore  master_robot.py  setup.sh  slave_data.csv
classes/contact/: ObstacleContact.py  PegHoleContact.py
classes/controllers/: CTC.py  ImpedanceController.py
classes/model/: RobotModel.py
classes/network/: MasterNetClient.py
classes/robots/: Master.py
code_scripts/: master_data.csv  plot_joint_states.py  slave_robot.py
code_scripts/classes/network/: SlaveNetServer.py
code_scripts/classes/robots/: Slave.py
code_scripts/legacy/: master_robot.py
code_scripts/test/: slave_net_dummy.py
force_sensor.ino/: force_sensor.ino.ino
ros2_ws/: activation.txt  setup_follower.sh  setup_master.sh
ros2_ws/force_sensor_reader/: package.xml  setup.cfg  setup.py
ros2_ws/force_sensor_reader/force_sensor_reader/: force_sensor_node.py
ros2_ws/force_sensor_reader/launch/: force_sensor.launch.py
ros2_ws/src/force_sensor_reader/force_sensor_reader/: README.md  force_sensor_node.py
ros2_ws/src/xarm_teleoperation/: CMakeLists.txt
ros2_ws/src/xarm_teleoperation/launch/: teleoperation_force.launch.py
ros2_ws/src/xarm_teleoperation/scripts/: controller_node.py  force_visualizer.py  haptic_feedback.py  logger.py  master_net_node.py  net_test.py  slave_net_node.py
ros2_ws/xarm_teleoperation/: CMakeLists.txt  package.xml
ros2_ws/xarm_teleoperation/scripts/: haptic_feedback.py  master_net_node.py  net_test.py  slave_net_node.py  slave_robot.py
test/: master_net_dummy.py  test_master.py  test_slave.py
