<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>force_sensor_reader</name>
  <version>0.1.0</version>
  <description>
    ROS2 Humble node that reads force and compression data from the
    force_sensor Arduino sketch over USB serial and publishes them as
    std_msgs/Float32 topics.
  </description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
